[package]
name = "polar-bear"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
xz2 = "0.1.7"

[target.'cfg(not(target_os = "android"))'.dependencies]
xbuild = "0.2.0"
clap = "4.5.28"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
log = "0.4"
mockall = "0.13.1"
tar = "0.4.43"
wayland-server = "0.31.6"
xkbcommon-rs = "0.1.0"
android_logger = { version = "0.14", default-features = false }
eframe = { version = "0.30", default-features = false, features = [
    "glow",
    "android-native-activity",
    "default_fonts",
] }
egui-winit = { version = "0.30", default-features = false, features = [
    "clipboard",
    "links",
] }

[target.'cfg(target_os = "android")'.dependencies.smithay]
git = "https://github.com/Smithay/smithay"
default-features = false
features = [
    "wayland-protocols",
    "wayland-server",
    "renderer_glow",
    "wayland_frontend",
]
