[package]
name = "polar-bear"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
xz2 = "0.1.7"

[target.'cfg(not(target_os = "android"))'.dependencies]
xbuild = "0.2.0"
clap = "4.5.27"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
log = "0.4"
mockall = "0.13.1"
tar = "0.4.44"
android_logger = { version = "0.14", default-features = false }
winit = { version = "0.30.9", features = [
    "android-native-activity",
    "wayland",
] }
wayland-protocols = "0.32.6"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
libloading = "0.8.6"
websocket = { version = "0.27.1", default-features = false, features = [
    "sync",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "android")'.dependencies.smithay]
version = "0.5.0"
default-features = false
features = [
    "wayland-protocols",
    "wayland-server",
    "renderer_glow",
    "wayland_frontend",
]

[patch.crates-io]
smithay = { path = "patches/smithay" }
